--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vDI-eM-Ryk">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vDI-eM-Ryk">
                                 <rect key="frame" x="57" y="110" width="260" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="43g-jz-5qH"/>
@@ -31,25 +31,46 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rick" translatesAutoresizingMaskIntoConstraints="NO" id="X1b-FA-kZa">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rick" translatesAutoresizingMaskIntoConstraints="NO" id="X1b-FA-kZa" customClass="RoundedImageView" customModule="MVCRefresher" customModuleProvider="target">
                                 <rect key="frame" x="67" y="200" width="240" height="272"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="Ung-Lo-5yw"/>
                                     <constraint firstAttribute="height" constant="272" id="WNv-eI-Pz1"/>
                                 </constraints>
                             </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a new first name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bEm-gn-PVN">
+                                <rect key="frame" x="62" y="162" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="O0Z-kc-XTE"/>
+                                    <constraint firstAttribute="width" constant="250" id="gpI-1g-R4h"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="knb-wf-q8b">
+                                <rect key="frame" x="159" y="480" width="56" height="30"/>
+                                <state key="normal" title="Rename"/>
+                                <connections>
+                                    <action selector="renamePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bzD-1V-R1H"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="bEm-gn-PVN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CDP-am-xaq"/>
+                            <constraint firstItem="bEm-gn-PVN" firstAttribute="top" secondItem="vDI-eM-Ryk" secondAttribute="bottom" constant="2" id="EW7-m8-Uyx"/>
                             <constraint firstItem="X1b-FA-kZa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KYj-KA-Zn4"/>
                             <constraint firstItem="vDI-eM-Ryk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kfg-UZ-l19"/>
+                            <constraint firstItem="knb-wf-q8b" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Oe8-Os-131"/>
                             <constraint firstItem="vDI-eM-Ryk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="90" id="TC6-OT-VJZ"/>
+                            <constraint firstItem="knb-wf-q8b" firstAttribute="top" secondItem="X1b-FA-kZa" secondAttribute="bottom" constant="8" id="g9S-AY-x8D"/>
                             <constraint firstItem="X1b-FA-kZa" firstAttribute="top" secondItem="vDI-eM-Ryk" secondAttribute="bottom" constant="40" id="php-ZK-sFq"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="fullName" destination="vDI-eM-Ryk" id="8lT-sz-ObR"/>
-                        <outlet property="rickImage" destination="X1b-FA-kZa" id="l2H-mV-PED"/>
+                        <outlet property="renameField" destination="bEm-gn-PVN" id="Mci-wI-Qho"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
